class Student {
  constructor(id, firstname, lastname, github, email) {
    this.id = id
    this.firstname = firstname
    this.lastname = lastname
    this.github = github
    this.email = email
  }
}

module.exports = Student
